--- a/src/Components/Social/Social.css
+++ b/src/Components/Social/Social.css
@@ -1,8 +1,8 @@
 .social i {
   font-size: 2rem;
-  margin: 1.5rem;
+  transition: 0.2s ease;
 }
 
 .social a {
-  width: fit-content;
+  margin: 1.5rem;
 }
